<resources>
    <string name="app_name">MovieDB</string>
    <string name="greeting_text">Hello Fellas,</string>
    <string name="sub_greeting">Looking for popular movie?</string>
    <string name="filter">Filter</string>
    <string name="search_movie">Search Movie</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter_movie">Filter Movie</string>
    <string name="save">Save</string>
    <string name="synopsis">Synopsis</string>
    <string name="user_reviews">User Reviews</string>
    <string name="trailer">Trailer</string>
    <string name="no_reviews">No Reviews :(</string>
</resources>