<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="id.muhammadfaisal.moviedb.vm.MovieViewModel" />
    </data>


    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/nestedScrollView"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.DetailMovieActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:src="@drawable/round_arrow_back_24"
                app:layout_constraintBottom_toBottomOf="@id/textTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/textTitle" />

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@{viewModel.detailMovie.title}"
                android:textColor="@color/black_text"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.cardview.widget.CardView
                android:id="@+id/cardImage"
                android:layout_width="match_parent"
                android:layout_height="384dp"
                android:layout_marginHorizontal="64dp"
                android:layout_marginVertical="16dp"
                app:cardBackgroundColor="@color/orange"
                app:cardCornerRadius="32dp"
                app:cardElevation="4dp"
                app:layout_constraintTop_toBottomOf="@id/textTitle">

                <ImageView
                    android:id="@+id/imageMovie"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textSynopsisTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/synopsis"
                android:textColor="@color/black_text"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardImage" />

            <TextView
                android:id="@+id/textSynopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins"
                android:text="@{viewModel.detailMovie.overview}"
                android:textColor="@color/dark_gray_text"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textSynopsisTitle" />

            <TextView
                android:id="@+id/textTrailerTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/trailer"
                android:textColor="@color/black_text"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textSynopsis" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerTrailer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textTrailerTitle" />

            <TextView
                android:id="@+id/textUserReviewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/user_reviews"
                android:textColor="@color/black_text"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recyclerTrailer" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/textUserReviewTitle">

                <TextView
                    android:layout_margin="16dp"
                    android:id="@+id/textEmpty"
                    android:textSize="18sp"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/gray_text"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_reviews"/>

                <androidx.recyclerview.widget.RecyclerView
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    android:id="@+id/recyclerReview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTint="@color/orange"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linearLayout" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>